--- a/MVC/Views/Home/Index.cshtml
+++ b/MVC/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
         @using (Html.BeginForm("Game", "Home"))
         {
 
-            <input type="text" name="nombre" placeholder="Ingrese su nombre" class="centrado"/><br />
+            <input type="text" name="nombre" placeholder="Ingrese su nombre" style="text-transform:capitalize" class="centrado"/><br />
             <br />
 
             <label for="errors">Selecciona la cantidad de errores</label>
