--- a/MVC/Views/Home/Game.cshtml
+++ b/MVC/Views/Home/Game.cshtml
@@ -15,10 +15,24 @@
         var wordleVM = new WordleVM(@Html.Raw(data));
         ko.applyBindings(wordleVM);
 
+        var finalizado = false;
+        var ganado = false;
+
         self.$("#intentar-button").click(function (e) {
             console.log($("#palabra-intentada").val())
+             if ($("#palabra-intentada").val().length != @Model.WordLength) {
+                alert("Error!! Chequear longitud de palabra")
+                return;
+            }
+            if (finalizado) {
+                alert("El juego ha terminado")
+                return;
+            }
             e.preventDefault();
             $.post('/Game/IntentarPalabra?palabra=' + $("#palabra-intentada").val(), function (data) {
+                finalizado = data.Finish;
+                ganado = data.Win;
+
                 $('#palabras-container').html("");
                 wordLenght = data.Dificultad * 2 + 1;
                 for (var i = 0; i < data.PalabrasIntentadas.length; i++) {
