--- a/MVC/Content/Site.css
+++ b/MVC/Content/Site.css
@@ -1,12 +1,13 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
-}
-
+﻿
 /* Set padding to keep content from hitting the edges */
 .body-content {
+    display: flex;
+    margin-top: 90px;
     padding-left: 15px;
     padding-right: 15px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
