--- a/MVC/Content/Site.css
+++ b/MVC/Content/Site.css
@@ -3,6 +3,7 @@
 .body-content {
     display: flex;
     margin-top: 90px;
+    margin-bottom: 90px;
     padding-left: 15px;
     padding-right: 15px;
     flex-direction: column;
