--- a/MVC/Views/Shared/_Layout.cshtml
+++ b/MVC/Views/Shared/_Layout.cshtml
@@ -34,8 +34,7 @@
     <div class="container body-content">
         @RenderBody()
 
-        <footer style="position: fixed; bottom: 0">
-            <hr />
+        <footer class="footer">
             <p>&copy; @DateTime.Now.Year - Metodologias Agiles - UTN FRRO</p>
         </footer>
     </div>
@@ -47,12 +46,34 @@
 </html>
 
 <style>
-    .title{
-        top: 15px;
+    :root {
+        --shadow-opacity: rgba(0,0,0,0.03)
+    }
+    .title {
+        top: 0;
+        background-color: white;
+        margin: 0;
         position: fixed;
         text-align: center;
         width: 100%;
-        padding: 0
+        padding: 10px 0;
+        box-shadow: 4px 1px 12px 8px var(--shadow-opacity);
+        -webkit-box-shadow: 4px 1px 12px 8px var(--shadow-opacity);
+        -moz-box-shadow: 4px 1px 12px 8px var(--shadow-opacity);
+    }
+    .footer {
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        margin: 0;
+        position: fixed;
+        vertical-align: central;
+        text-align: center;
+        padding: 3px 0;
+        background-color: white;
+        box-shadow: -2px -5px 12px 8px var(--shadow-opacity);
+        -webkit-box-shadow: -2px -5px 12px 8px var(--shadow-opacity);
+        -moz-box-shadow: -2px -5px 12px 8px var(--shadow-opacity);
     }
 
     .main-title {
