Solucion pequeños bugs

--- a/MVC/Views/Home/Game.cshtml
+++ b/MVC/Views/Home/Game.cshtml
@@ -22,14 +22,19 @@
             location.reload(true)
         })
 
+        $("#palabra-intentada").keyup(function (event) {
+            if (event.keyCode === 13) {
+                $("#intentar-button").click();
+            }
+        });
 
         self.$("#intentar-button").click(function (e) {
-             if ($("#palabra-intentada").val().length != @Model.WordLength) {
-                alert("Error!! Chequear longitud de palabra")
-                return;
-            }
             if (finalizado) {
                 alert("El juego ha terminado")
+                return;
+            }
+            if ($("#palabra-intentada").val().length != @Model.WordLength) {
+                alert("Error!! Chequear longitud de palabra")
                 return;
             }
             e.preventDefault();
@@ -61,10 +66,12 @@
                 }
                 $("word-input").val("");
                 if (data.Finish) {
+                    $("#palabra-intentada").attr("disabled", true)
                     if (data.Win) {
                         alert("GANASTE, FELICITACIONES! La palabra era: " + data.Palabra.toUpperCase() + ".")
+                        $("#palabra-intentada").attr("placeholder", "FELICITACIONES!!")
                     } else {
-                        $("#palabra-intentada").attr("disabled", true)
+                        $("#palabra-intentada").attr("placeholder", "PERDEDOR.")
                         $("#intentar-button").removeClass("visible").addClass("hidden")
                         $("#reintentar-button").removeClass("hidden").addClass("visible")
                         alert("GAME OVER. Te quedaste sin intentos. La palabra era " + data.Palabra.toUpperCase() + ".")
@@ -92,7 +99,7 @@
                     })
             </div>
         </div>
-        <button id="intentar-button" class="button intentar-button visible">Intentar!</button>
+        <button id="intentar-button" type="submit" class="button intentar-button visible">Intentar!</button>
         <button id="reintentar-button" class="button reintentar-button hidden">Rententar!</button>
         @*<div class="reintentar-button-container">*@
 
@@ -170,7 +177,7 @@
         text-transform: uppercase;
         font-size: 24px;
         border-radius: var(--border-radius);
-        padding: 0 0 0 15px;
+        text-align: center
     }
 
     
